# diggy-gizzy

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md
src/: commands.rs  main.rs  summarizer.rs  transcriber.rs  translator.rs  user_settings.rs  voice_recorder.rs  voice_translator.rs
