[package]
name = "diggy-gizzy"
version = "0.1.0"
edition = "2024"
authors = ["sitne"]
description = "Discord meeting minutes bot powered by Rust and Twilight"
repository = "https://github.com/sitne/diggy-gizzy"
license = "MIT"
readme = "README.md"
keywords = ["discord", "bot", "voice", "recording", "transcription", "whisper", "twilight", "rust"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
twilight-gateway = { version = "0.16", features = ["simd-json"] }
twilight-http = { version = "0.16", features = ["simd-json"] }
twilight-cache-inmemory = "0.16"
twilight-interactions = { version = "0.16", features = ["derive"] }
twilight-model = "0.16"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenvy = "0.15"
rustls = { version = "0.23", features = ["ring"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
songbird = { version = "0.5", features = ["receive", "driver", "twilight"] }
audiopus = "0.2"
whisper-rs = { version = "0.14", features = ["cuda"] }
hound = "3.5"
uuid = { version = "1.0", features = ["v4"] }
tracing-futures = "0.2"
async-trait = "0.1"
bytes = "1"
